--- a/22100143_Kim, Yeryoung_12W_quiz.ipynb
+++ b/22100143_Kim, Yeryoung_12W_quiz.ipynb
@@ -2,381 +2,127 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 9491 entries, 0 to 9490\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column           Non-Null Count  Dtype  \n",
+      "---  ------           --------------  -----  \n",
+      " 0   날짜               9491 non-null   object \n",
+      " 1   측정소명             9491 non-null   object \n",
+      " 2   미세먼지             9278 non-null   float64\n",
+      " 3   초미세먼지            9288 non-null   float64\n",
+      " 4   오존               9294 non-null   float64\n",
+      " 5   이산화질소\n",
+      "NO2 (ppm)  9285 non-null   float64\n",
+      " 6   일산화탄소\n",
+      "CO (ppm)   9234 non-null   float64\n",
+      " 7   아황산가스\n",
+      "SO2(ppm)   9298 non-null   float64\n",
+      "dtypes: float64(6), object(2)\n",
+      "memory usage: 593.3+ KB\n",
+      "None\n",
+      "              미세먼지        초미세먼지           오존  이산화질소\\nNO2 (ppm)  \\\n",
+      "count  9278.000000  9288.000000  9294.000000       9285.000000   \n",
+      "mean     41.748006    24.921619     0.024771          0.028068   \n",
+      "std      26.742015    18.410941     0.013191          0.012733   \n",
+      "min       3.000000     1.000000     0.001000          0.001000   \n",
+      "25%      24.000000    14.000000     0.014000          0.018000   \n",
+      "50%      36.000000    21.000000     0.024000          0.026000   \n",
+      "75%      52.000000    30.000000     0.034000          0.036000   \n",
+      "max     228.000000   153.000000     0.088000          0.089000   \n",
+      "\n",
+      "       일산화탄소\\nCO (ppm)  아황산가스\\nSO2(ppm)  \n",
+      "count      9234.000000      9298.000000  \n",
+      "mean          0.530626         0.003951  \n",
+      "std           0.218623         0.001302  \n",
+      "min           0.100000         0.001000  \n",
+      "25%           0.400000         0.003000  \n",
+      "50%           0.500000         0.004000  \n",
+      "75%           0.600000         0.005000  \n",
+      "max           2.000000         0.010000  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "#\n",
+    "df=pd.read_excel('서울대기오염_2019.xlsx')\n",
+    "print(df.info())\n",
+    "print(df.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>날짜</th>\n",
-       "      <th>측정소명</th>\n",
-       "      <th>미세먼지</th>\n",
-       "      <th>초미세먼지</th>\n",
-       "      <th>오존</th>\n",
-       "      <th>이산화질소\\nNO2 (ppm)</th>\n",
-       "      <th>일산화탄소\\nCO (ppm)</th>\n",
-       "      <th>아황산가스\\nSO2(ppm)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>전체</td>\n",
-       "      <td>평균</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>0.025</td>\n",
-       "      <td>0.028</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.004</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2019-12-31</td>\n",
-       "      <td>평균</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>0.022</td>\n",
-       "      <td>0.016</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.003</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2019-12-31</td>\n",
-       "      <td>강남구</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>0.025</td>\n",
-       "      <td>0.014</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.003</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2019-12-31</td>\n",
-       "      <td>강동구</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>0.019</td>\n",
-       "      <td>0.020</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.003</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2019-12-31</td>\n",
-       "      <td>강북구</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>0.022</td>\n",
-       "      <td>0.022</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.002</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9486</th>\n",
-       "      <td>2019-01-01</td>\n",
-       "      <td>용산구</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>0.014</td>\n",
-       "      <td>0.032</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.003</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9487</th>\n",
-       "      <td>2019-01-01</td>\n",
-       "      <td>은평구</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>0.020</td>\n",
-       "      <td>0.023</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>0.005</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9488</th>\n",
-       "      <td>2019-01-01</td>\n",
-       "      <td>종로구</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>0.017</td>\n",
-       "      <td>0.031</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>0.004</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9489</th>\n",
-       "      <td>2019-01-01</td>\n",
-       "      <td>중구</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>0.020</td>\n",
-       "      <td>0.030</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.003</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9490</th>\n",
-       "      <td>2019-01-01</td>\n",
-       "      <td>중랑구</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>0.014</td>\n",
-       "      <td>0.030</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>0.007</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>9491 rows × 8 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "              날짜 측정소명  미세먼지  초미세먼지     오존  이산화질소\\nNO2 (ppm)  일산화탄소\\nCO (ppm)  \\\n",
-       "0             전체   평균  42.0   25.0  0.025             0.028              0.5   \n",
-       "1     2019-12-31   평균  26.0   15.0  0.022             0.016              0.4   \n",
-       "2     2019-12-31  강남구  22.0   14.0  0.025             0.014              0.4   \n",
-       "3     2019-12-31  강동구  27.0   19.0  0.019             0.020              0.4   \n",
-       "4     2019-12-31  강북구  31.0   17.0  0.022             0.022              0.4   \n",
-       "...          ...  ...   ...    ...    ...               ...              ...   \n",
-       "9486  2019-01-01  용산구  30.0   24.0  0.014             0.032              0.6   \n",
-       "9487  2019-01-01  은평구  33.0   22.0  0.020             0.023              0.9   \n",
-       "9488  2019-01-01  종로구  34.0   21.0  0.017             0.031              0.7   \n",
-       "9489  2019-01-01   중구  36.0   25.0  0.020             0.030              0.6   \n",
-       "9490  2019-01-01  중랑구  34.0   25.0  0.014             0.030              0.7   \n",
-       "\n",
-       "      아황산가스\\nSO2(ppm)  \n",
-       "0               0.004  \n",
-       "1               0.003  \n",
-       "2               0.003  \n",
-       "3               0.003  \n",
-       "4               0.002  \n",
-       "...               ...  \n",
-       "9486            0.003  \n",
-       "9487            0.005  \n",
-       "9488            0.004  \n",
-       "9489            0.003  \n",
-       "9490            0.007  \n",
-       "\n",
-       "[9491 rows x 8 columns]"
+       "날짜                    0\n",
+       "측정소명                  0\n",
+       "미세먼지                213\n",
+       "초미세먼지               203\n",
+       "오존                  197\n",
+       "이산화질소\\nNO2 (ppm)    206\n",
+       "일산화탄소\\nCO (ppm)     257\n",
+       "아황산가스\\nSO2(ppm)     193\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "df=pd.read_excel('서울대기오염_2019.xlsx')\n",
-    "df"
+    "df.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['오존'] = df.groupby('측정소명')['오존'].transform(lambda x: x.fillna(x.mean()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['평균', '강남구', '강동구', '강북구', '강서구', '관악구', '광진구', '구로구', '금천구',\n",
-       "       '노원구', '도봉구', '동대문구', '동작구', '마포구', '서대문구', '서초구', '성동구', '성북구',\n",
-       "       '송파구', '양천구', '영등포구', '용산구', '은평구', '종로구', '중구', '중랑구'],\n",
-       "      dtype=object)"
+       "날짜                    0\n",
+       "측정소명                  0\n",
+       "미세먼지                213\n",
+       "초미세먼지               203\n",
+       "오존                    0\n",
+       "이산화질소\\nNO2 (ppm)    206\n",
+       "일산화탄소\\nCO (ppm)     257\n",
+       "아황산가스\\nSO2(ppm)     193\n",
+       "오존존                   0\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['측정소명'].unique()"
+    "df.isnull().sum()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[df['측정소명'] == '강남구'].groupby('이산화질소\\nNO2 (ppm)').mean(numeric_only=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "#파일 넣기기\n",
-    "input_file = \"C:/Users/kimye/Desktop/예령/22100143 대학 예동/5학기/introduction to Big Data/mid/7번/dirty_customer.csv\"\n",
-    "#1. 파일 확인: \n",
-    "df = pd.read_csv(input_file)\n",
-    "\n",
-    "# 결측값 처리 함수: 수치형 → 중앙값, 범주형 → 최빈값\n",
-    "def handle_missing(df):\n",
-    "    for col in df.columns:\n",
-    "        if df[col].dtype in ['float64', 'int64']:  # 수치형\n",
-    "            df[col] = df[col].fillna(df[col].median())\n",
-    "        else:  # 범주형 또는 문자열\n",
-    "            df[col] = df[col].fillna(df[col].mode().iloc[0])\n",
-    "    return df\n",
-    "\n",
-    "\n",
-    "\n",
-    "# 이상치 제거 함수 (IQR 적용)\n",
-    "def remove_outliers(df):\n",
-    "    df_cleaned = df.copy()\n",
-    "    num_cols = df.select_dtypes(include=['float64', 'int64']).columns\n",
-    "\n",
-    "    for col in num_cols:\n",
-    "        Q1 = df[col].quantile(0.25)\n",
-    "        Q3 = df[col].quantile(0.75)\n",
-    "        IQR = Q3 - Q1\n",
-    "        lower_bound = Q1 - 3 * IQR\n",
-    "        upper_bound = Q3 + 3 * IQR\n",
-    "        df_cleaned = df_cleaned[(df_cleaned[col] >= lower_bound) & (df_cleaned[col] <= upper_bound)]\n",
-    "\n",
-    "    return df_cleaned\n",
-    "\n",
-    "# 범주형 변수 인코딩 함수 (LabelEncoder 사용, 실패 시 해시 기반)\n",
-    "def encode_categoricals(df):\n",
-    "    cat_cols = df.select_dtypes(include=['object', 'category']).columns\n",
-    "    cat_cols = [col for col in cat_cols if col != 'year']\n",
-    "    for col in cat_cols:\n",
-    "        try:\n",
-    "            df[col] = LabelEncoder().fit_transform(df[col])\n",
-    "        except:\n",
-    "            df[col] = df[col].astype(str).apply(lambda x: hash(x) % 1000)  # 해시값으로 대체\n",
-    "    return df\n",
-    "\n",
-    "\n",
-    "# 수치형 데이터 정규화 함수 (StandardScaler 사용)\n",
-    "def standard_numerics(df):\n",
-    "    num_cols = df.select_dtypes(include=['float64', 'int64']).columns\n",
-    "    num_cols = [col for col in num_cols if col != 'year']\n",
-    "    scaler = StandardScaler()\n",
-    "    df[num_cols] = scaler.fit_transform(df[num_cols])\n",
-    "    return df\n",
-    "\n",
-    "# 수치형 데이터 표준화화 함수 (MinMaxScaler 사용)\n",
-    "def normalize_numerics(df):\n",
-    "    num_cols = df.select_dtypes(include=['float64', 'int64']).columns\n",
-    "    scaler = MinMaxScaler()\n",
-    "    df[num_cols] = scaler.fit_transform(df[num_cols])\n",
-    "    return df\n",
-    "\n",
-    "# 4. 중복 제거  df = df.drop_duplicates(subset=['업체명', '주업종', '사업자등록번호'])\n",
-    "\n",
-    "# 변수 분류 (OneHot & gender or Label)\n",
-    "label_encode_cols = []\n",
-    "onehot_cols = []\n",
-    "\n",
-    "for col in df.columns:\n",
-    "    if df[col].dtype == 'object' and col not in ['Gender', 'gender', 'Sex', 'sex']:\n",
-    "        n_unique = df[col].nunique()\n",
-    "        if n_unique > 2:\n",
-    "            label_encode_cols.append(col)\n",
-    "        elif n_unique == 2:\n",
-    "            onehot_cols.append(col)\n",
-    "\n",
-    "\n",
-    "'''\n",
-    "#1. 데이터 확인\n",
-    "print(df.info())\n",
-    "print(df.isnull().sum())\n",
-    "#2-1 각 열별 결측 비율 계산\n",
-    "null_ratio = (df.isnull().sum() / len(df)) * 100\n",
-    "\n",
-    "# 50% 이상 결측인 열만 골라서 삭제\n",
-    "df = df.drop(columns = null_ratio[null_ratio > 50].index)\n",
-    "\n",
-    "#2-2. 중복 제거\n",
-    "df.duplicated()\n",
-    "df = df.drop_duplicates(subset=['업체명', '주업종', '사업자등록번호'])\n",
-    "\n",
-    "df.columns\n",
-    "df = df.drop(columns=['Transaction Date'])\n",
-    "\n",
-    "#2-3. 결측치 제거(채우기기): \n",
-    "df=handle_missing(df)\n",
-    "\n",
-    "#2-4. outlier 제거(수치화):\n",
-    "df=remove_outliers(df)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "#3. 엔코딩(변수 분류): #성별 주의!\n",
-    "onehot_cols, label_encode_cols\n",
-    "\n",
-    "df[label_encode_cols]=encode_categoricals(df[label_encode_cols]) # Label\n",
-    "df = pd.get_dummies(df, columns=onehot_cols + ['gender']) #OneHot\n",
-    "\n",
-    "#4-1. 정규화\n",
-    "df[['training_hours']]=standard_numerics(df[['training_hours']])\n",
-    "\n",
-    "#4-2. 표준화화\n",
-    "df[['training_hours']]=normalize_numerics(df[['training_hours']])\n",
-    "\n",
-    "#5. 마지막: 파이프 라인 함수화 & 전처리 된 csv 파일 추출\n",
-    "\n",
-    "\n",
-    "def some_function(input_file):\n",
-    "\n",
-    "return df\n",
-    "\n",
-    "output_file = some_function(input_file) \n",
-    "\n",
-    "df.to_csv('201906_output.csv', index=False)\n",
-    "'''\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
