--- a/22100143_Kim, Yeryoung_12W_quiz.ipynb
+++ b/22100143_Kim, Yeryoung_12W_quiz.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -52,10 +52,18 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "#\n",
-    "df=pd.read_excel('서울대기오염_2019.xlsx')\n",
+    "\n",
+    "\n",
+    "#파일 넣기기\n",
+    "input_file = \"서울대기오염_2019\"\n",
+    "\n",
+    "#1. 파일 확인: \n",
+    "df = pd.read_excel(input_file)\n",
+    "\n",
     "print(df.info())\n",
-    "print(df.describe())"
+    "print(df.isnull().sum())\n",
+    "\n",
+    "df"
    ]
   },
   {
@@ -78,44 +86,6 @@
       ]
      },
      "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.isnull().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['오존'] = df.groupby('측정소명')['오존'].transform(lambda x: x.fillna(x.mean()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "날짜                    0\n",
-       "측정소명                  0\n",
-       "미세먼지                213\n",
-       "초미세먼지               203\n",
-       "오존                    0\n",
-       "이산화질소\\nNO2 (ppm)    206\n",
-       "일산화탄소\\nCO (ppm)     257\n",
-       "아황산가스\\nSO2(ppm)     193\n",
-       "오존존                   0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
