--- a/22100143_Kim, Yeryoung_12W_quiz.ipynb
+++ b/22100143_Kim, Yeryoung_12W_quiz.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -28,34 +28,215 @@
       "dtypes: float64(6), object(2)\n",
       "memory usage: 593.3+ KB\n",
       "None\n",
-      "              미세먼지        초미세먼지           오존  이산화질소\\nNO2 (ppm)  \\\n",
-      "count  9278.000000  9288.000000  9294.000000       9285.000000   \n",
-      "mean     41.748006    24.921619     0.024771          0.028068   \n",
-      "std      26.742015    18.410941     0.013191          0.012733   \n",
-      "min       3.000000     1.000000     0.001000          0.001000   \n",
-      "25%      24.000000    14.000000     0.014000          0.018000   \n",
-      "50%      36.000000    21.000000     0.024000          0.026000   \n",
-      "75%      52.000000    30.000000     0.034000          0.036000   \n",
-      "max     228.000000   153.000000     0.088000          0.089000   \n",
-      "\n",
-      "       일산화탄소\\nCO (ppm)  아황산가스\\nSO2(ppm)  \n",
-      "count      9234.000000      9298.000000  \n",
-      "mean          0.530626         0.003951  \n",
-      "std           0.218623         0.001302  \n",
-      "min           0.100000         0.001000  \n",
-      "25%           0.400000         0.003000  \n",
-      "50%           0.500000         0.004000  \n",
-      "75%           0.600000         0.005000  \n",
-      "max           2.000000         0.010000  \n"
+      "날짜                    0\n",
+      "측정소명                  0\n",
+      "미세먼지                213\n",
+      "초미세먼지               203\n",
+      "오존                  197\n",
+      "이산화질소\\nNO2 (ppm)    206\n",
+      "일산화탄소\\nCO (ppm)     257\n",
+      "아황산가스\\nSO2(ppm)     193\n",
+      "dtype: int64\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>날짜</th>\n",
+       "      <th>측정소명</th>\n",
+       "      <th>미세먼지</th>\n",
+       "      <th>초미세먼지</th>\n",
+       "      <th>오존</th>\n",
+       "      <th>이산화질소\\nNO2 (ppm)</th>\n",
+       "      <th>일산화탄소\\nCO (ppm)</th>\n",
+       "      <th>아황산가스\\nSO2(ppm)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>전체</td>\n",
+       "      <td>평균</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>0.025</td>\n",
+       "      <td>0.028</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019-12-31</td>\n",
+       "      <td>평균</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0.022</td>\n",
+       "      <td>0.016</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2019-12-31</td>\n",
+       "      <td>강남구</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0.025</td>\n",
+       "      <td>0.014</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2019-12-31</td>\n",
+       "      <td>강동구</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>0.019</td>\n",
+       "      <td>0.020</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2019-12-31</td>\n",
+       "      <td>강북구</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>0.022</td>\n",
+       "      <td>0.022</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9486</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>용산구</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>0.014</td>\n",
+       "      <td>0.032</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9487</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>은평구</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>0.020</td>\n",
+       "      <td>0.023</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9488</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>종로구</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>0.017</td>\n",
+       "      <td>0.031</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0.004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9489</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>중구</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>0.020</td>\n",
+       "      <td>0.030</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9490</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>중랑구</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>0.014</td>\n",
+       "      <td>0.030</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0.007</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9491 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              날짜 측정소명  미세먼지  초미세먼지     오존  이산화질소\\nNO2 (ppm)  일산화탄소\\nCO (ppm)  \\\n",
+       "0             전체   평균  42.0   25.0  0.025             0.028              0.5   \n",
+       "1     2019-12-31   평균  26.0   15.0  0.022             0.016              0.4   \n",
+       "2     2019-12-31  강남구  22.0   14.0  0.025             0.014              0.4   \n",
+       "3     2019-12-31  강동구  27.0   19.0  0.019             0.020              0.4   \n",
+       "4     2019-12-31  강북구  31.0   17.0  0.022             0.022              0.4   \n",
+       "...          ...  ...   ...    ...    ...               ...              ...   \n",
+       "9486  2019-01-01  용산구  30.0   24.0  0.014             0.032              0.6   \n",
+       "9487  2019-01-01  은평구  33.0   22.0  0.020             0.023              0.9   \n",
+       "9488  2019-01-01  종로구  34.0   21.0  0.017             0.031              0.7   \n",
+       "9489  2019-01-01   중구  36.0   25.0  0.020             0.030              0.6   \n",
+       "9490  2019-01-01  중랑구  34.0   25.0  0.014             0.030              0.7   \n",
+       "\n",
+       "      아황산가스\\nSO2(ppm)  \n",
+       "0               0.004  \n",
+       "1               0.003  \n",
+       "2               0.003  \n",
+       "3               0.003  \n",
+       "4               0.002  \n",
+       "...               ...  \n",
+       "9486            0.003  \n",
+       "9487            0.005  \n",
+       "9488            0.004  \n",
+       "9489            0.003  \n",
+       "9490            0.007  \n",
+       "\n",
+       "[9491 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "\n",
-    "\n",
+    "#1. 데이터 불러오기 및 전처리\n",
     "#파일 넣기기\n",
-    "input_file = \"서울대기오염_2019\"\n",
+    "input_file = \"서울대기오염_2019.xlsx\"\n",
     "\n",
     "#1. 파일 확인: \n",
     "df = pd.read_excel(input_file)\n",
@@ -68,31 +249,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "날짜                    0\n",
-       "측정소명                  0\n",
-       "미세먼지                213\n",
-       "초미세먼지               203\n",
-       "오존                  197\n",
-       "이산화질소\\nNO2 (ppm)    206\n",
-       "일산화탄소\\nCO (ppm)     257\n",
-       "아황산가스\\nSO2(ppm)     193\n",
+       "date          0\n",
+       "district      0\n",
+       "pm10        213\n",
+       "pm25        203\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.isnull().sum()"
+    "# [1-1] 데이터프레임으로 불러오기\n",
+    "# [1-2] 분석변수만 추출 및 컬럼명 변경: date, district, pm10, pm25\n",
+    "\n",
+    "# [1-2] 분석변수 추출 및 컬럼명 변경\n",
+    "df_filtered = df[['날짜', '측정소명', '미세먼지', '초미세먼지']].copy()\n",
+    "df_filtered.columns = ['date', 'district', 'pm10', 'pm25']\n",
+    "\n",
+    "df_filtered.isnull().sum()\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "date        0\n",
+      "district    0\n",
+      "pm10        0\n",
+      "pm25        0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# [1-3] 결측치 확인 및 제거 (df_filtered 기준)\n",
+    "# df_filtered는 ['date', 'district', 'pm10', 'pm25'] 컬럼만 존재함\n",
+    "\n",
+    "# 결측치가 있는 열 목록만 추출 (pm10, pm25만 해당)\n",
+    "columns_with_na = df_filtered.columns[df_filtered.isnull().any()].tolist()\n",
+    "\n",
+    "# 'district'별 평균값으로 결측치 채우기\n",
+    "for col in columns_with_na:\n",
+    "    df_filtered[col] = df_filtered.groupby('district')[col].transform(lambda x: x.fillna(x.mean()))\n",
+    "\n",
+    "# 결측치 확인\n",
+    "print(df_filtered.isnull().sum())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
