--- a/22100143_Kim, Yeryoung_12W_quiz.ipynb
+++ b/22100143_Kim, Yeryoung_12W_quiz.ipynb
@@ -314,10 +314,537 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>district</th>\n",
+       "      <th>pm10</th>\n",
+       "      <th>pm25</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaT</td>\n",
+       "      <td>평균</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>25.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019-12-31</td>\n",
+       "      <td>평균</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>15.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2019-12-31</td>\n",
+       "      <td>강남구</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2019-12-31</td>\n",
+       "      <td>강동구</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>19.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2019-12-31</td>\n",
+       "      <td>강북구</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>17.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9486</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>용산구</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>24.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9487</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>은평구</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>22.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9488</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>종로구</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>21.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9489</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>중구</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>25.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9490</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>중랑구</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>25.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9491 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           date district  pm10  pm25\n",
+       "0           NaT       평균  42.0  25.0\n",
+       "1    2019-12-31       평균  26.0  15.0\n",
+       "2    2019-12-31      강남구  22.0  14.0\n",
+       "3    2019-12-31      강동구  27.0  19.0\n",
+       "4    2019-12-31      강북구  31.0  17.0\n",
+       "...         ...      ...   ...   ...\n",
+       "9486 2019-01-01      용산구  30.0  24.0\n",
+       "9487 2019-01-01      은평구  33.0  22.0\n",
+       "9488 2019-01-01      종로구  34.0  21.0\n",
+       "9489 2019-01-01       중구  36.0  25.0\n",
+       "9490 2019-01-01      중랑구  34.0  25.0\n",
+       "\n",
+       "[9491 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# [1-4] 자료형 변환\n",
+    "\n",
+    "# 1. 'date' 컬럼을 datetime 형식으로 변환\n",
+    "df_filtered['date'] = pd.to_datetime(df_filtered['date'], errors='coerce')\n",
+    "\n",
+    "# 2. pm10, pm25 컬럼을 실수형으로 변환 (혹시 모를 문자 포함 대비)\n",
+    "df_filtered['pm10'] = pd.to_numeric(df_filtered['pm10'], errors='coerce')\n",
+    "df_filtered['pm25'] = pd.to_numeric(df_filtered['pm25'], errors='coerce')\n",
+    "\n",
+    "\n",
+    "df_filtered\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>district</th>\n",
+       "      <th>pm10</th>\n",
+       "      <th>pm25</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaT</td>\n",
+       "      <td>평균</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019-12-31</td>\n",
+       "      <td>평균</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2019-12-31</td>\n",
+       "      <td>강남구</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2019-12-31</td>\n",
+       "      <td>강동구</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2019-12-31</td>\n",
+       "      <td>강북구</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9486</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>용산구</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9487</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>은평구</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9488</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>종로구</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9489</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>중구</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9490</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>중랑구</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9491 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           date district  pm10  pm25  month  day\n",
+       "0           NaT       평균  42.0  25.0    NaN  NaN\n",
+       "1    2019-12-31       평균  26.0  15.0   12.0  1.0\n",
+       "2    2019-12-31      강남구  22.0  14.0   12.0  1.0\n",
+       "3    2019-12-31      강동구  27.0  19.0   12.0  1.0\n",
+       "4    2019-12-31      강북구  31.0  17.0   12.0  1.0\n",
+       "...         ...      ...   ...   ...    ...  ...\n",
+       "9486 2019-01-01      용산구  30.0  24.0    1.0  1.0\n",
+       "9487 2019-01-01      은평구  33.0  22.0    1.0  1.0\n",
+       "9488 2019-01-01      종로구  34.0  21.0    1.0  1.0\n",
+       "9489 2019-01-01       중구  36.0  25.0    1.0  1.0\n",
+       "9490 2019-01-01      중랑구  34.0  25.0    1.0  1.0\n",
+       "\n",
+       "[9491 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#2. 파생변수수\n",
+    "\n",
+    "# [2-1] month, day 파생변수 생성\n",
+    "df_filtered['month'] = df_filtered['date'].dt.month\n",
+    "\n",
+    "# [2-1] 요일 (숫자형: 월=0, 일=6)\n",
+    "df_filtered['day'] = df_filtered['date'].dt.dayofweek\n",
+    "\n",
+    "\n",
+    "df_filtered"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>district</th>\n",
+       "      <th>pm10</th>\n",
+       "      <th>pm25</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>season</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaT</td>\n",
+       "      <td>평균</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>winter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019-12-31</td>\n",
+       "      <td>평균</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>winter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2019-12-31</td>\n",
+       "      <td>강남구</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>winter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2019-12-31</td>\n",
+       "      <td>강동구</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>winter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2019-12-31</td>\n",
+       "      <td>강북구</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>winter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9486</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>용산구</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>winter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9487</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>은평구</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>winter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9488</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>종로구</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>winter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9489</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>중구</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>winter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9490</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>중랑구</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>winter</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9491 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           date district  pm10  pm25  month  day  season\n",
+       "0           NaT       평균  42.0  25.0    NaN  NaN  winter\n",
+       "1    2019-12-31       평균  26.0  15.0   12.0  1.0  winter\n",
+       "2    2019-12-31      강남구  22.0  14.0   12.0  1.0  winter\n",
+       "3    2019-12-31      강동구  27.0  19.0   12.0  1.0  winter\n",
+       "4    2019-12-31      강북구  31.0  17.0   12.0  1.0  winter\n",
+       "...         ...      ...   ...   ...    ...  ...     ...\n",
+       "9486 2019-01-01      용산구  30.0  24.0    1.0  1.0  winter\n",
+       "9487 2019-01-01      은평구  33.0  22.0    1.0  1.0  winter\n",
+       "9488 2019-01-01      종로구  34.0  21.0    1.0  1.0  winter\n",
+       "9489 2019-01-01       중구  36.0  25.0    1.0  1.0  winter\n",
+       "9490 2019-01-01      중랑구  34.0  25.0    1.0  1.0  winter\n",
+       "\n",
+       "[9491 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# [2-2] 계절(season) 변수 생성\n",
+    "\n",
+    "# 월(month) 컬럼 생성\n",
+    "df_filtered['month'] = df_filtered['date'].dt.month\n",
+    "\n",
+    "# 계절(season) 컬럼 생성\n",
+    "def get_season(month):\n",
+    "    if month in [3, 4, 5]:\n",
+    "        return 'spring'\n",
+    "    elif month in [6, 7, 8]:\n",
+    "        return 'summer'\n",
+    "    elif month in [9, 10, 11]:\n",
+    "        return 'autumn'\n",
+    "    else:\n",
+    "        return 'winter'\n",
+    "\n",
+    "df_filtered['season'] = df_filtered['month'].apply(get_season)\n",
+    "\n",
+    "df_filtered\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#3. 전처리 완료 데이터 확인 및 저장\n",
+    "\n",
+    "# [3-1] 최종 분석 대상 데이터 확인\n",
+    "df_filtered\n",
+    "# [3-2] 'card_output.csv'로 저장\n",
+    "df.to_csv('card_output.csv')\n"
+   ]
   }
  ],
  "metadata": {
