--- a/22100143_Kim, Yeryoung_12W_quiz.ipynb
+++ b/22100143_Kim, Yeryoung_12W_quiz.ipynb
@@ -845,6 +845,125 @@
     "# [3-2] 'card_output.csv'로 저장\n",
     "df.to_csv('card_output.csv')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PM10의 전체 평균값: 41.78 ㎍/m³\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 데이터 분석 단계 4. 연간 미세먼지 평균 구하기\n",
+    "\n",
+    "# [4-1] 전체 데이터 기준 PM10 평균\n",
+    "\n",
+    "pm10_mean = df_filtered['pm10'].mean()\n",
+    "# 분석결과 작성\n",
+    "print(f\"PM10의 전체 평균값: {pm10_mean:.2f} ㎍/m³\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PM10 최댓값: 228.0 ㎍/m³\n",
+      "날짜: 2019-03-05\n",
+      "측정소(구): 강북구\n"
+     ]
+    }
+   ],
+   "source": [
+    "#5. 미세먼지 최댓값 날짜 확인\n",
+    "# [5-1] PM10 최댓값이 발생한 날짜, 구 출력\n",
+    "maximum_pm10 = df_filtered.loc[df_filtered['pm10'].idxmax()]\n",
+    "\n",
+    "# 출력\n",
+    "print(f\"PM10 최댓값: {maximum_pm10['pm10']} ㎍/m³\")\n",
+    "print(f\"날짜: {maximum_pm10['date'].date()}\")\n",
+    "print(f\"측정소(구): {maximum_pm10['district']}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   district  mean_pm10\n",
+      "4       관악구  48.974359\n",
+      "18      양천구  47.695055\n",
+      "12      마포구  47.086154\n",
+      "3       강서구  46.504132\n",
+      "2       강북구  44.950685\n"
+     ]
+    }
+   ],
+   "source": [
+    "# [6-1] 각 구별 PM10 평균 계산\n",
+    "pm10_district = df_filtered.groupby('district')['pm10'].mean().reset_index()\n",
+    "\n",
+    "# 컬럼명 변경\n",
+    "pm10_district.columns = ['district', 'mean_pm10']\n",
+    "\n",
+    "# [6-2] 상위 5개 구 출력\n",
+    "top5= pm10_district.sort_values(by='mean_pm10', ascending=False).head(5)\n",
+    "\n",
+    "print(top5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   season  mean_pm10  mean_pm25\n",
+      "2  summer  26.519951  18.189842\n",
+      "0  autumn  32.076626  16.505728\n",
+      "1  spring  54.088629  31.558110\n",
+      "3  winter  54.618362  33.620668\n"
+     ]
+    }
+   ],
+   "source": [
+    "# [7-1] 계절별 평균 pm10, pm25 동시 계산\n",
+    "seasonal_mean = df_filtered.groupby('season')[['pm10', 'pm25']].mean().reset_index()\n",
+    "\n",
+    "# 컬럼명 변경\n",
+    "seasonal_mean.columns = ['season', 'mean_pm10', 'mean_pm25']\n",
+    "\n",
+    "# [7-2] PM10 평균값 기준 오름차순 정렬\n",
+    "seasonal_mean_sorted = seasonal_mean.sort_values(by='mean_pm10', ascending=True)\n",
+    "\n",
+    "# 출력\n",
+    "print(seasonal_mean_sorted)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
