--- a/22100143_Kim, Yeryoung_12W_quiz.ipynb
+++ b/22100143_Kim, Yeryoung_12W_quiz.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
        "[9491 rows x 8 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -294,6 +294,137 @@
       "pm25        0\n",
       "dtype: int64\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>district</th>\n",
+       "      <th>pm10</th>\n",
+       "      <th>pm25</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>전체</td>\n",
+       "      <td>평균</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>25.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019-12-31</td>\n",
+       "      <td>평균</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>15.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2019-12-31</td>\n",
+       "      <td>강남구</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2019-12-31</td>\n",
+       "      <td>강동구</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>19.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2019-12-31</td>\n",
+       "      <td>강북구</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>17.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9486</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>용산구</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>24.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9487</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>은평구</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>22.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9488</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>종로구</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>21.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9489</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>중구</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>25.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9490</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>중랑구</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>25.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9491 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            date district  pm10  pm25\n",
+       "0             전체       평균  42.0  25.0\n",
+       "1     2019-12-31       평균  26.0  15.0\n",
+       "2     2019-12-31      강남구  22.0  14.0\n",
+       "3     2019-12-31      강동구  27.0  19.0\n",
+       "4     2019-12-31      강북구  31.0  17.0\n",
+       "...          ...      ...   ...   ...\n",
+       "9486  2019-01-01      용산구  30.0  24.0\n",
+       "9487  2019-01-01      은평구  33.0  22.0\n",
+       "9488  2019-01-01      종로구  34.0  21.0\n",
+       "9489  2019-01-01       중구  36.0  25.0\n",
+       "9490  2019-01-01      중랑구  34.0  25.0\n",
+       "\n",
+       "[9491 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -309,14 +440,28 @@
     "\n",
     "# 결측치 확인\n",
     "print(df_filtered.isnull().sum())\n",
+    "\n",
+    "# PM10 수치를 등급(good/normal/bad/worse)으로 분류하는 작업이므로\n",
+    "# 정규화를 적용하지 않음. 정규화를 하면 절대 기준값(예: 30, 80 등)이 왜곡되어\n",
+    "# 등급 분류 기준이 의미 없게 되기 때문임.\n",
+    "df_filtered\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kimye\\AppData\\Local\\Temp\\ipykernel_10476\\258107857.py:4: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  df_filtered['date'] = pd.to_datetime(df_filtered['date'], errors='coerce')\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -444,7 +589,7 @@
        "[9491 rows x 4 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +764,7 @@
        "[9491 rows x 6 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +950,7 @@
        "[9491 rows x 7 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +1116,6 @@
        "      <th>month</th>\n",
        "      <th>day</th>\n",
        "      <th>season</th>\n",
-       "      <th>pm_grade</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -984,7 +1128,6 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>winter</td>\n",
-       "      <td>normal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -995,7 +1138,6 @@
        "      <td>12.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>winter</td>\n",
-       "      <td>good</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1006,7 +1148,6 @@
        "      <td>12.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>winter</td>\n",
-       "      <td>good</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1017,7 +1158,6 @@
        "      <td>12.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>winter</td>\n",
-       "      <td>good</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1028,11 +1168,9 @@
        "      <td>12.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>winter</td>\n",
-       "      <td>normal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -1050,7 +1188,6 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>winter</td>\n",
-       "      <td>good</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9487</th>\n",
@@ -1061,7 +1198,6 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>winter</td>\n",
-       "      <td>normal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9488</th>\n",
@@ -1072,7 +1208,6 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>winter</td>\n",
-       "      <td>normal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9489</th>\n",
@@ -1083,7 +1218,6 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>winter</td>\n",
-       "      <td>normal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9490</th>\n",
@@ -1094,31 +1228,30 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>winter</td>\n",
-       "      <td>normal</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>9491 rows × 8 columns</p>\n",
+       "<p>9491 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           date district  pm10  pm25  month  day  season pm_grade\n",
-       "0           NaT       평균  42.0  25.0    NaN  NaN  winter   normal\n",
-       "1    2019-12-31       평균  26.0  15.0   12.0  1.0  winter     good\n",
-       "2    2019-12-31      강남구  22.0  14.0   12.0  1.0  winter     good\n",
-       "3    2019-12-31      강동구  27.0  19.0   12.0  1.0  winter     good\n",
-       "4    2019-12-31      강북구  31.0  17.0   12.0  1.0  winter   normal\n",
-       "...         ...      ...   ...   ...    ...  ...     ...      ...\n",
-       "9486 2019-01-01      용산구  30.0  24.0    1.0  1.0  winter     good\n",
-       "9487 2019-01-01      은평구  33.0  22.0    1.0  1.0  winter   normal\n",
-       "9488 2019-01-01      종로구  34.0  21.0    1.0  1.0  winter   normal\n",
-       "9489 2019-01-01       중구  36.0  25.0    1.0  1.0  winter   normal\n",
-       "9490 2019-01-01      중랑구  34.0  25.0    1.0  1.0  winter   normal\n",
+       "           date district  pm10  pm25  month  day  season\n",
+       "0           NaT       평균  42.0  25.0    NaN  NaN  winter\n",
+       "1    2019-12-31       평균  26.0  15.0   12.0  1.0  winter\n",
+       "2    2019-12-31      강남구  22.0  14.0   12.0  1.0  winter\n",
+       "3    2019-12-31      강동구  27.0  19.0   12.0  1.0  winter\n",
+       "4    2019-12-31      강북구  31.0  17.0   12.0  1.0  winter\n",
+       "...         ...      ...   ...   ...    ...  ...     ...\n",
+       "9486 2019-01-01      용산구  30.0  24.0    1.0  1.0  winter\n",
+       "9487 2019-01-01      은평구  33.0  22.0    1.0  1.0  winter\n",
+       "9488 2019-01-01      종로구  34.0  21.0    1.0  1.0  winter\n",
+       "9489 2019-01-01       중구  36.0  25.0    1.0  1.0  winter\n",
+       "9490 2019-01-01      중랑구  34.0  25.0    1.0  1.0  winter\n",
        "\n",
-       "[9491 rows x 8 columns]"
+       "[9491 rows x 7 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1140,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1185,14 +1318,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\kimye\\AppData\\Local\\Temp\\ipykernel_10476\\2785259363.py:15: UserWarning: Glyph 13197 (\\N{SQUARE MU G}) missing from font(s) DejaVu Sans.\n",
+      "C:\\Users\\kimye\\AppData\\Local\\Temp\\ipykernel_10476\\4030057799.py:16: UserWarning: Glyph 13197 (\\N{SQUARE MU G}) missing from font(s) DejaVu Sans.\n",
       "  plt.tight_layout()\n",
       "C:\\Users\\kimye\\AppData\\Roaming\\Python\\Python313\\site-packages\\IPython\\core\\pylabtools.py:170: UserWarning: Glyph 13197 (\\N{SQUARE MU G}) missing from font(s) DejaVu Sans.\n",
       "  fig.canvas.print_figure(bytes_io, **kw)\n"
@@ -1207,6 +1340,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\n2019년 서울시의 일별 PM10 추세를 살펴보면,\\n1~3월에 거치면서 미세먼지 고농도로 피크를 찍는 것을 볼 수 있다. 특히, 3월 초에 약 180㎍/m³ 이상의 극심한 피크가 관측되었다.\\n 이는 초봄 꽃가루, 대기 정체 등 계절 특성 및 시기적으로 활발하한 활동이 시작되는 시기이기 피크를 미세먼지 농도가 높은 것으로 보인다.\\n\\n반면, 6~8월 여름철에는 PM10 농도가 현저히 낮아지는 추세이다. 이는 장마철을 비롯한 강수량 증가 등이 관여한 것으로 보인다.\\n\\n11~12월 겨울 초입에는 다시 농도가 상승하며, 난방 및 대기 정체의 영향을 받는 것으로 추정된다.\\n\\n전체적으로 PM10 농도는 겨울에서 증가하여 봄에 고점을 찍고, 여름의 장마철 특성 등에 기반하여 낮은 계절적 패턴을 보여주었다. \\n'"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1245,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1257,6 +1400,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"\\n2019년 서울의 PM10 등급을 계절별로 비교한 결과,\\n여름은 전체의 약 67% 이상이 '좋음(good)' 등급으로 분포하며, 미세먼지 농도가 가장 양호하다.\\n여름 특성상 강수량 증가, 공기 순환 활발 등의 기상 요인 관여하여 좋게 PM10 농도가 낮게 나왔음을 알 수 있다.\\n\\n겨울 및 봄은 각각 ‘normal’ 등급이 70% 이상으로 높게 나타났다.\\n특히 봄철에는 ‘나쁨(bad)’과 ‘매우 나쁨(worse)’ 비율도 상대적으로 높은 것을 볼 수 있다.\\n이는 겨울과 봄을 거치면서 봄철 꽃가루, 겨울철 난방 및 대기 정체가 관여한 것 같다.\\n\\n가을(autumn)은 '좋음'과 '보통' 등급이 비교적 균형을 이루며, 상대적으로 안정적인 양상을 띄고 있다.\\n\""
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1306,12 +1459,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "#최종 분석 데이터(전처리 파일)\n",
-    "df.to_csv('card_output.csv')"
+    "df.to_csv('final_card_output.csv')"
    ]
   },
   {
